[package]
name = "rustendo_lib"
version = "0.1.0"
authors = ["Marc Reisner <reisner.marc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
